--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.25",
     "@types/uuid": "^8.3.4",
+    "axios": "^1.4.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
